# cortexlab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ai_fix.patch  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md  feature_request.md
.github/workflows/: auto-assign.yml  ci.yml
benchmarks/: bench_ridge.py
examples/: quick_start.py  temporal_dynamics_demo.py
experiments/: brain_alignment_comparison.py  build_feature_cache.py  causal_modality_ablation.py  cross_subject_eval.py
experiments/config/: brain_alignment_comparison.yaml  cross_subject_eval.yaml
notebooks/: tutorial_analysis.ipynb
scripts/: animate_cortical_maps.py  plot_cortical_maps.py  postprocess_roi.py
scripts/slurm/: README.md  bench_ridge.sbatch  env_setup.sh  extract_features.sbatch  run_lesion.sbatch  smoke_test.sh
scripts/slurm/config/: lesion_bold_moments.yaml
src/cortexlab/: __init__.py
src/cortexlab/analysis/: __init__.py  brain_alignment.py  cognitive_load.py  connectivity.py  lesion.py  noise_ceiling.py  stats.py  temporal_dynamics.py
src/cortexlab/core/: __init__.py  attention.py  export.py  model.py  profiler.py  subject.py
src/cortexlab/data/: __init__.py  loader.py  parcellations.py  transforms.py
src/cortexlab/data/studies/: lahner2024bold.py  lebel2023bold.py
src/cortexlab/features/: __init__.py  extractors.py  text.py
src/cortexlab/gpu/: __init__.py  _ridge_triton.py  ridge.py
src/cortexlab/inference/: __init__.py  attribution.py  predictor.py  streaming.py
src/cortexlab/training/: __init__.py  experiment.py
src/cortexlab/viz/: __init__.py  base.py  cortical.py  cortical_pv.py  subcortical.py  surface_renderer.py  temporal_plots.py  utils.py
tests/: conftest.py  test_attention.py  test_attribution.py  test_brain_alignment.py  test_cognitive_load.py  test_connectivity.py  test_edge_cases.py  test_features.py  test_gpu_ridge.py  test_integration.py  test_lahner_captions_and_frames.py  test_lahner_load_subject.py  test_lahner_noise_ceiling.py  test_lahner_paths.py  test_lesion.py  test_model.py  test_noise_ceiling.py  test_parcellations.py  test_predictor.py  test_statistical.py  test_stats.py  test_streaming.py  test_subject_adapter.py  test_surface_renderer.py  test_temporal_dynamics.py  test_temporal_plots.py  test_text_features.py
